--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,5 +1,3 @@
-/* Add this to the existing styles.css */
-
 * {
   box-sizing: border-box;
 }
@@ -69,13 +67,23 @@ iframe {
 
 .btn:hover {
   color: hsla(160, 100%, 37%, 0.8);
+
+  color: whitesmoke;
   box-shadow: inset 0 0 10px hsla(160, 88%, 16%, 0.8);
 }
 
 .input {
-  display;
+  width: 100%;
+  background-color: hsla(160, 100%, 37%, 1);
+  color: whitesmoke;
   padding: 0.5rem;
   margin: 0.5rem;
   border: 1px solid #ccc;
   border-radius: 5px;
+}
+
+.input:hover {
+  background-color: hsla(160, 100%, 37%, .8);
+  color: whitesmoke;
+  box-shadow: inset 0 0 10px hsla(160, 88%, 16%, 0.8);
 }
